get and post communities endpoints
